# p1-projekt

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  calculate_proportionality.c  header.h  main.c  output_district_1.txt  settings.c
src/Archive/: Archive.c  dataimport_test.c  north_carolina.c  output_to_txt1.c
src/Output_files/: output_to_txt.txt
src/Output_files/eval_map/: output_district_1.txt  output_district_10.txt  output_district_11.txt  output_district_12.txt  output_district_13.txt  output_district_14.txt  output_district_2.txt  output_district_3.txt  output_district_4.txt  output_district_5.txt  output_district_6.txt  output_district_7.txt  output_district_8.txt  output_district_9.txt
src/construct_state/: construct_counties.c  construct_state.c  construct_state_header.h
src/data_formaters/DataImporter/: main.c
src/data_formaters/north_carolina/: north_carolina.c  us_house_north_carolina_results_2024.csv
src/eval_map/: CMakeLists.txt  eval_map.c
src/input/: test.c
src/input_files/: grid_north carolina_correctID.csv  grid_north carolina_correctID_version2.csv  grid_north_carolina.csv  grid_north_carolina_correctID.txt  test_party_votes.csv  us_house_north_carolina_results_2024.csv  us_house_north_carolina_results_2024_index.csv  us_house_north_carolina_results_2024_index.txt
src/lib/: CMakeLists.txt  error_handler.c
src/lib/DataImporter/: CMakeLists.txt  dataimporter.c  dataimporter.h
src/lib/Output/: CMakeLists.txt  output.c  output.h
src/lib/calculate_proportionality/: CMakeLists.txt  calculate_proportionality.c  calculate_proportionality.h  gallagher_index.c  percentages_and_seats.c
src/lib/construct_state/: CMakeLists.txt  construct_counties.c  construct_parties.c  construct_state.c  construct_state_header.h
src/lib/data_formaters/north_carolina/: north_carolina.c
src/lib/eval_map/: CMakeLists.txt  eval_fill.c  eval_map.c  eval_map.h  eval_shape.c
src/project_test/: CMakeLists.txt  Gallagher_index_test_2.c  calculate_proportionality.c  construct_parties_test1.c  dataimport_test.c  eval_map_test.c  graph_test.c  output_to_txt1.c  test.h
